// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News List Test get default NewsList no params  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="news-list"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="news-list"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`News List Test get default NewsList with data  1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="news-list"
      >
        <div
          class="news-item"
        >
          <div
            class="news-item__img"
          >
            <div
              class="news-item__img--content"
              style="background-image: url(https://www.irishtimes.com/polopoly_fs/1.4221277.1586082453!/image/image.jpg);"
              title="LIVE Coronavirus: 4,500 tests to be carried out per day from this week, HSE says"
            />
          </div>
          <div
            class="news-item__info"
          >
            <h3
              class="news-item__info--title"
            >
              LIVE Coronavirus: 4,500 tests to be carried out per day from this week, HSE says
            </h3>
            <div>
              <span
                class="news-item__info--source"
              >
                The Irish Times
              </span>
              <span
                class="news-item__info--published-at"
              >
                2 hours ago
              </span>
            </div>
            <span
              class="news-item__info--description"
            >
              70,000 applications made to Ireland on Call healthcare worker scheme
            </span>
          </div>
        </div>
        <div
          class="news-item"
        >
          <div
            class="news-item__img"
          >
            <div
              class="news-item__img--content"
              style="background-image: url(https://ichef.bbci.co.uk/news/1024/branded_news/04B5/production/_111050210_gettyimages-1031709582.jpg);"
              title="Mast fire probe amid 5G coronavirus claims"
            />
          </div>
          <div
            class="news-item__info"
          >
            <h3
              class="news-item__info--title"
            >
              Mast fire probe amid 5G coronavirus claims
            </h3>
            <div>
              <span
                class="news-item__info--source"
              >
                Hacker News
              </span>
              <span
                class="news-item__info--published-at"
              >
                2 hours ago
              </span>
            </div>
            <span
              class="news-item__info--description"
            >
              There have been fires at masts in Birmingham, Liverpool and Melling in Merseyside.
            </span>
          </div>
        </div>
        <div
          class="news-item"
        >
          <div
            class="news-item__img"
          >
            <div
              class="news-item__img--content"
              style="background-image: url(https://avatars2.githubusercontent.com/u/1259448?s=400&v=4);"
              title="qubole/afctl"
            />
          </div>
          <div
            class="news-item__info"
          >
            <h3
              class="news-item__info--title"
            >
              qubole/afctl
            </h3>
            <div>
              <span
                class="news-item__info--source"
              >
                Hacker News
              </span>
              <span
                class="news-item__info--published-at"
              >
                2 hours ago
              </span>
            </div>
            <span
              class="news-item__info--description"
            >
              afctl helps to manage and deploy Apache Airflow projects faster and smoother. - qubole/afctl
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="news-list"
    >
      <div
        class="news-item"
      >
        <div
          class="news-item__img"
        >
          <div
            class="news-item__img--content"
            style="background-image: url(https://www.irishtimes.com/polopoly_fs/1.4221277.1586082453!/image/image.jpg);"
            title="LIVE Coronavirus: 4,500 tests to be carried out per day from this week, HSE says"
          />
        </div>
        <div
          class="news-item__info"
        >
          <h3
            class="news-item__info--title"
          >
            LIVE Coronavirus: 4,500 tests to be carried out per day from this week, HSE says
          </h3>
          <div>
            <span
              class="news-item__info--source"
            >
              The Irish Times
            </span>
            <span
              class="news-item__info--published-at"
            >
              2 hours ago
            </span>
          </div>
          <span
            class="news-item__info--description"
          >
            70,000 applications made to Ireland on Call healthcare worker scheme
          </span>
        </div>
      </div>
      <div
        class="news-item"
      >
        <div
          class="news-item__img"
        >
          <div
            class="news-item__img--content"
            style="background-image: url(https://ichef.bbci.co.uk/news/1024/branded_news/04B5/production/_111050210_gettyimages-1031709582.jpg);"
            title="Mast fire probe amid 5G coronavirus claims"
          />
        </div>
        <div
          class="news-item__info"
        >
          <h3
            class="news-item__info--title"
          >
            Mast fire probe amid 5G coronavirus claims
          </h3>
          <div>
            <span
              class="news-item__info--source"
            >
              Hacker News
            </span>
            <span
              class="news-item__info--published-at"
            >
              2 hours ago
            </span>
          </div>
          <span
            class="news-item__info--description"
          >
            There have been fires at masts in Birmingham, Liverpool and Melling in Merseyside.
          </span>
        </div>
      </div>
      <div
        class="news-item"
      >
        <div
          class="news-item__img"
        >
          <div
            class="news-item__img--content"
            style="background-image: url(https://avatars2.githubusercontent.com/u/1259448?s=400&v=4);"
            title="qubole/afctl"
          />
        </div>
        <div
          class="news-item__info"
        >
          <h3
            class="news-item__info--title"
          >
            qubole/afctl
          </h3>
          <div>
            <span
              class="news-item__info--source"
            >
              Hacker News
            </span>
            <span
              class="news-item__info--published-at"
            >
              2 hours ago
            </span>
          </div>
          <span
            class="news-item__info--description"
          >
            afctl helps to manage and deploy Apache Airflow projects faster and smoother. - qubole/afctl
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
